# LLM-RAG-Exploration

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  debug.ipynb  pyproject.toml
ragit/: database.py  embedding.py  etl.py  main.py  query.py
