[tool.poetry]
name = "ragit"
version = "0.1.0"
description = "Application that applies the LLM Chatbot model on any sources of writing."
authors = ["William D'Onofrio <16698591+wdonofrio@users.noreply.github.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.20"
chromadb = "^0.5.0"
pypdf = "^4.2.0"
cryptography = "^42.0.7"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ipykernel = "^6.29.4"
pre-commit = "^3.7.1"
pylint = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
